# MediaRefinery

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  opencode.json.example  pyproject.toml  requirements-dev-frontend.txt
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dev-only-paths
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-merge.yml  ci.yml  docs.yml  nightly.yml  promote-dev-to-main.yml  release.yml  semgrep.yml
docs/: README.md
docs/admin/: configuration.md  operations.md  troubleshooting.md
docs/architecture/: ADR-0010-service-architecture.md
docs/development/: local-development.md  repository-structure.md
docs/getting-started/: installation.md
docs/guides/: dashboard.md  models.md
docs/models/: README.md  catalog.json
docs/reference/: api.md  immich-api-compat.md
docs/releases/: release-checklist.md  release-readiness-audit.md
docs/runbooks/: branch-policy.md  opencode-init.md
docs/security/: threat-model.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
planning/: dependency-map.md
scripts/: fill_numpy_docstrings.py  fill_test_docstrings.py
templates/: config.example.yml  config.immich-smoke.example.yml  config.preset.sensitive.example.yml  docker-compose.example.yml  env.example  env.smoke.example  issue-template.md  pr-template.md
tests/: check_test_standards.py  conftest.py  test_actions.py  test_analysis.py  test_classifier.py  test_cli.py  test_config.py  test_decision.py  test_doctor.py  test_edge_cases.py  test_extractor.py  test_http_tls_and_bind.py  test_immich.py  test_locked_folder.py  test_ocr.py  test_reporter.py  test_scan_privacy.py  test_scanner.py  test_settings_config_db.py  test_state.py
tools/: bootstrap-opencode.cmd  bootstrap-opencode.ps1  check-operator-env-gates.sh  check_coverage.py  ci-install-chromium.sh  install-githooks.cmd
(+113 files in other folders)
