[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mediarefinery"
version = "0.0.1"
description = "Local-first media triage companion for Immich with user-defined categories."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "MediaRefinery contributors" }
]
dependencies = [
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=7.0",
  "ruff>=0.6",
  "pip-audit>=2.7"
]
onnx = [
  "numpy>=1.26",
  "onnxruntime>=1.17,<2",
  "Pillow>=10.0"
]
ocr = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "rapidocr-onnxruntime>=1.4,<2; python_version < '3.13'",
  "rapidocr-onnxruntime>=1.2.3,<2; python_version >= '3.13'"
]
service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "apscheduler>=3.10,<4",
  "cryptography>=42",
  "itsdangerous>=2.1",
  "httpx>=0.27"
]

[project.scripts]
mediarefinery-service = "mediarefinery.service.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mediarefinery = [
  "web/index.html",
  "web/assets/*"
]

[tool.setuptools.data-files]
"docs/models" = ["docs/models/README.md", "docs/models/catalog.json"]
"docs/models/licenses" = [
  "docs/models/licenses/adamcodd-vit-nsfw-Apache-2.0.txt",
  "docs/models/licenses/onnx-models-Apache-2.0.txt"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "playwright: end-to-end browser tests using Playwright (deselect with -m 'not playwright')",
]

[tool.coverage.run]
source = ["mediarefinery"]
patch = ["subprocess"]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
